fix: :bug: remove unintentional dark mode
Demo app doesn't support dark mode but had some css that would change the background color of the html document

--- a/src/index.css
+++ b/src/index.css
@@ -74,9 +74,6 @@ html {
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
   overflow-y: visible;
-  @media (prefers-color-scheme: dark) {
-    background-color: black;
-  }
   overscroll-behavior: none;
 }
 
